--- a/carcount/app/src/main/AndroidManifest.xml
+++ b/carcount/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tw.edu.au.carcount" >
 
+
+
+
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,5 +21,9 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission></uses-permission>
 
 </manifest>
